<resources>
    <string name="api_key">e620d96713c54ce9a16e9c561a0c0e88</string>
    <string name="app_name">PengaduanMasyarakatRevisi</string>
    <string name="Logintext">Login</string>
    <string name="username">Username</string>
    <string name="passwordlogin">Password</string>
    <string name="loginbutton">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or_login_with">Or Login With</string>
    <string name="from">FROM</string>
    <string name="logologinwith">logologinwith</string>
    <string name="team">TEAM</string>
    <string name="logoutama">logoutama</string>
    <string name="bglogin">bglogin</string>
    <string name="Registerreg">Register</string>
    <string name="nikreg">NIK</string>
    <string name="fullnamereg">Fullname</string>
    <string name="usernamereg">Username</string>
    <string name="passwordreg">Password</string>
    <string name="verifypasswordreg">Verify Password</string>
    <string name="registerbutton">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="Loginreg">Login</string>
    <string name="regbuttonlogin">Register</string>
    <string name="webclientid">914580842417-g34u1iopuqv1d4rb082vc5calmcn61ov.apps.googleusercontent.com</string>
    <string name="email">Email</string>
    <string name="tl">Tanggal Lahir</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="Home">home</string>
    <string name="notification">notification</string>
    <string name="account">account</string>
    <string name="setting">setting</string>
    <string name="notelp">No Telp</string>
    <string name="title_activity_user_dashboard">UserDashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_buatlaporan">Buat Laporan</string>
    <string name="menu_lihatlaporan">Lihat Laporan</string>
    <string name="menu_riwayatlaporan">Riwayat Laporan</string>
    <string name="menu_profilesetting">Profile</string>
    <string name="menu_notificationsetting">Notification</string>
    <string name="menu_callcenter">Pusat Bantuan</string>
    <string name="menu_about">Tentang</string>
    <string name="menu_rate">Rate</string>
    <string name="menu_shareapplication">Share Application</string>
    <string name="menu_berita">Berita</string>
    <string name="string_berita">ini berita</string>
    <string name="text2home">Lakukan pengaduan untuk membuat daerah menjadi lebih baik</string>
</resources>