<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="900dp"
        android:src="@drawable/bgwaijo"
        android:scaleType="fitXY"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bgwa"/>

    <TextView
        android:id="@+id/regtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/Registerreg"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="48sp"
        android:textColor="@color/Ijologo"
        android:layout_marginTop="60dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutnik"
        android:layout_width="488dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="0dp"
        android:layout_below="@+id/regtext"
        app:boxStrokeColor="@color/Ijologo"
        app:boxStrokeWidth="2dp"
        android:paddingTop="10dp"
        android:hint="@string/nikreg"
        app:boxStrokeErrorColor="@color/red"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:hintTextColor="@color/Ijologo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nikreg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:minHeight="48dp"
            android:drawableStart="@drawable/custom_nik"
            android:drawablePadding="12dp"
            android:fontFamily="@font/opensans_bold"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHighlight="#000000">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutnotelp"
        android:layout_width="488dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="0dp"
        android:layout_below="@+id/layoutnik"
        app:boxStrokeColor="@color/white"
        app:boxStrokeWidth="2dp"
        android:paddingTop="10dp"
        android:hint="@string/notelp"
        app:hintTextColor="@color/Ijologo"
        app:boxStrokeErrorColor="@color/red"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/notelpreg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:minHeight="48dp"
            android:drawableStart="@drawable/custom_call"
            android:drawablePadding="12dp"
            android:fontFamily="@font/opensans_bold"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHighlight="#000000">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layouttgl"
        android:layout_centerHorizontal="true"
        android:layout_width="488dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="0dp"
        android:layout_below="@+id/layoutnotelp"
        app:boxStrokeColor="@color/white"
        app:boxStrokeWidth="2dp"
        android:paddingTop="10dp"
        android:hint="@string/tl"
        app:hintTextColor="@color/Ijologo"
        app:startIconTint="@color/white"
        android:orientation="horizontal"
        app:boxStrokeErrorColor="@color/red"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tanggallahir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:minHeight="48dp"
            android:drawableStart="@drawable/custom_calendertodayk"
            android:drawablePadding="12dp"
            android:fontFamily="@font/opensans_bold"
            android:inputType="date"
            android:textColor="@color/black"
            android:textColorHighlight="#000000">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/logocalender"
        android:layout_width="25dp"
        android:layout_height="28dp"
        android:layout_below="@id/layoutnotelp"
        android:background="@drawable/baseline_edit_calendar_24"
        android:layout_alignParentRight="true"
        android:layout_marginRight="40dp"
        android:layout_marginTop="30dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutlog"
        android:layout_width="488dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="0dp"
        android:layout_below="@+id/layouttgl"
        app:boxStrokeColor="@color/white"
        app:boxStrokeWidth="2dp"
        android:paddingTop="10dp"
        android:hint="@string/email"
        app:hintTextColor="@color/Ijologo"
        app:startIconTint="@color/white"
        app:boxStrokeErrorColor="@color/red"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernamereg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:minHeight="48dp"
            android:autofillHints="emailAddress"
            android:drawableStart="@drawable/custom_mail_icon_reg"
            android:drawablePadding="12dp"
            android:fontFamily="@font/opensans_bold"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHighlight="#000000">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutpass"
        android:layout_width="488dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="0dp"
        android:orientation="vertical"
        android:layout_below="@+id/layoutlog"
        app:startIconTint="@color/white"
        android:hint="@string/passwordlogin"
        android:paddingTop="10dp"
        app:hintTextColor="@color/Ijologo"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/darkergrey"
        app:boxStrokeWidth="2dp"
        app:boxStrokeColor="@color/white"
        app:boxStrokeErrorColor="@color/red"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passreg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:autofillHints="password"
            android:textColor="@color/black"
            android:drawableStart="@drawable/custom_lock_icon_reg"
            android:drawablePadding="12dp"
            android:fontFamily="@font/opensans_bold"
            android:inputType="textPassword"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:textColorHighlight="@color/black"
            android:textColorLink="@color/white">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutverifypass"
        android:layout_width="488dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="0dp"
        android:orientation="vertical"
        android:layout_below="@+id/layoutpass"
        app:startIconTint="@color/white"
        android:hint="@string/verifypasswordreg"
        android:paddingTop="10dp"
        app:hintTextColor="@color/Ijologo"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/darkergrey"
        app:boxStrokeWidth="2dp"
        app:boxStrokeColor="@color/white"
        app:boxStrokeErrorColor="@color/red"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/verifypassreg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:autofillHints="password"
            android:textColor="@color/black"
            android:drawableStart="@drawable/custom_lock_icon_reg"
            android:drawablePadding="12dp"
            android:fontFamily="@font/opensans_bold"
            android:inputType="textPassword"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:textColorHighlight="@color/black"
            android:textColorLink="@color/white">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <!--    <LinearLayout-->
    <!--        android:id="@+id/formregister"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:orientation="vertical"-->
    <!--        android:layout_below="@+id/regtext"-->
    <!--        android:padding="30dp">-->

    <!--        <EditText-->
    <!--            android:id="@+id/usernamereg"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:hint="@string/usernamereg"-->
    <!--            android:autofillHints="emailAddress"-->
    <!--            android:fontFamily="@font/opensans_extrabold"-->
    <!--            android:textSize="14sp"-->
    <!--            android:background="@drawable/button"-->
    <!--            android:inputType="textEmailAddress"-->
    <!--            android:paddingStart="10dp"-->
    <!--            android:paddingEnd="10dp"-->
    <!--            android:padding="15dp"-->
    <!--            />-->

    <!--        <EditText-->
    <!--            android:id="@+id/passreg"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:hint="@string/passwordreg"-->
    <!--            android:autofillHints="password"-->
    <!--            android:fontFamily="@font/opensans_extrabold"-->
    <!--            android:textSize="14sp"-->
    <!--            android:background="@drawable/button"-->
    <!--            android:inputType="textPassword"-->
    <!--            android:paddingStart="10dp"-->
    <!--            android:paddingEnd="10dp"-->
    <!--            android:padding="15dp"-->
    <!--            android:layout_marginTop="2dp"-->
    <!--            />-->

    <!--        <EditText-->
    <!--            android:id="@+id/verifypassreg"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:hint="@string/verifypasswordreg"-->
    <!--            android:autofillHints="password"-->
    <!--            android:fontFamily="@font/opensans_extrabold"-->
    <!--            android:textSize="14sp"-->
    <!--            android:background="@drawable/button"-->
    <!--            android:inputType="textPassword"-->
    <!--            android:paddingStart="10dp"-->
    <!--            android:paddingEnd="10dp"-->
    <!--            android:padding="15dp"-->
    <!--            android:layout_marginTop="2dp"-->
    <!--            />-->

    <!--    </LinearLayout>-->

    <Button
        android:id="@+id/regbutton"
        android:layout_below="@+id/layoutverifypass"
        android:layout_width="320dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:text="@string/registerbutton"
        android:textSize="16sp"
        android:textAlignment="center"
        android:fontFamily="@font/montserrat_bold"
        android:background="@drawable/loginijonew"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:layout_marginRight="120dp"
        android:layout_marginLeft="120dp"
        android:paddingBottom="10dp"
        />

    <LinearLayout
        android:layout_centerHorizontal="true"
        android:id="@+id/already"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/regbutton"
        android:layout_marginStart="90dp"
        android:layout_marginTop="-3dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:fontFamily="@font/opensans_semibold"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:textAlignment="center"
            />
        <TextView
            android:id="@+id/gotologin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Loginreg"
            android:fontFamily="@font/opensans_extrabold"
            android:textSize="14sp"
            android:textColor="@color/biru"
            android:textAlignment="center"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/from"
        android:layout_below="@+id/already"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/from"
        android:fontFamily="@font/opensans_semibold"
        android:textSize="14sp"
        android:textColor="#90FFFFFF"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        />

    <TextView
        android:id="@+id/team"
        android:layout_below="@+id/from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/team"
        android:fontFamily="@font/opensans_semibold"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_marginTop="0dp"
        />


</RelativeLayout>